infra/kubernetes/cluster-01/apps/monitoring/prometheus/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: prometheus
  namespace: monitoring
  labels:
    app: prometheus
spec:
  selector:
    app: prometheus
  ports:
    - name: prometheus-web
      protocol: TCP
      port: 80
      targetPort: web
